    (Masatake Iwasaki via aw)

    HADOOP-11632. Cleanup Find.java to remove SupressWarnings annotations.
    (Akira Ajisaka via ozawa)

    HADOOP-10976. moving the source code of hadoop-tools docs to the
    directory under hadoop-tools (Masatake Iwasaki via aw)

    HADOOP-11658. Externalize io.compression.codecs property.
    (Kai Zheng via aajisaka)

  OPTIMIZATIONS

    HADOOP-11323. WritableComparator#compare keeps reference to byte array.
    (Wilfred Spiegelenburg via wang)

    HADOOP-11238. Update the NameNode's Group Cache in the background when
    possible (Chris Li via Colin P. McCabe)

    HADOOP-10809. hadoop-azure: page blob support. (Dexter Bradshaw,
    Mostafa Elhemali, Eric Hanson, and Mike Liddell via cnauroth)

    HADOOP-11188. hadoop-azure: automatically expand page blobs when they become
    full. (Eric Hanson via cnauroth)

    HADOOP-11506. Configuration variable expansion regex expensive for long
    values. (Gera Shegalov via gera)

    HADOOP-11620. Add support for load balancing across a group of KMS for HA.
    (Arun Suresh via wang)

    HADOOP-11183. Memory-based S3AOutputstream. (Thomas Demoor via stevel)

  BUG FIXES

    HADOOP-11512. Use getTrimmedStrings when reading serialization keys
    (Ryan P via harsh)

    HADOOP-11488. Difference in default connection timeout for S3A FS
    (Daisuke Kobayashi via harsh)

    HADOOP-11256. Some site docs have inconsistent appearance (Masatake 
    Iwasaki via aw)

    HADOOP-11318. Update the document for hadoop fs -stat (aajisaka)

    HADOOP 11400. GraphiteSink does not reconnect to Graphite after 'broken pipe' 
    (Kamil Gorlo via raviprak)

    HADOOP-11236. NFS: Fix javadoc warning in RpcProgram.java (Abhiraj Butala via harsh)

    HADOOP-11166. Remove ulimit from test-patch.sh. (wang)

    HDFS-7227. Fix findbugs warning about NP_DEREFERENCE_OF_READLINE_VALUE in
    SpanReceiverHost (cmccabe)

    HADOOP-11186. documentation should talk about